--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*",
+              "vite-env.d.ts"]
     }
   }
 }
